Add the rest of the styles
each section styles and photos added

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
             <div class="intro_div">
                 <div class="intro_section">
                     <h1 class="intro_title">Outreach Revival Church</h1>
-                    <p class="intro_text">Go ye Therefore and preach the word, baptising in the name of the father the son and the holly spirit</p>
+                    <p class="intro_text"> Go ye therefore, and teach all nations, baptizing them in the name of the Father, and of the Son, and of the Holy Spirit: 20 Teaching them to observe all things whatsoever I have commanded you: and, lo, I am with you always, even unto the end of the world. Amen</p>
                     <button class="intro_btn">Register</button>
                 </div>
 
                 <div class="intro_section intro_section--img">
-                    <img src="images/ORM.jpg" alt="A picture showing a pulpit of Outreach Church Iten">
+                    <img src="images/ORM.png" alt="A picture showing a pulpit of Outreach Church Iten">
                 </div> 
             </div>
 
@@ -47,42 +47,42 @@
 
     <div class="min_section">
         <div class="container">
-            
             <h1 class="section_title">Ministries</h1>
             <div class="min">
                 <div class="min_row">
                     <div class="img">
-                        <img src="" alt="">
+                        <img src="images/Thursday Service1.png" alt="Poster Advetising Thursday fellowship">
                     </div>
-                    <p class="min_row--text"></p>
+                    <p class="min_row--text">Thusday fellowship, A discipleship class for new beleivers and nourishment for everyone</p>
                 </div>
                 <div class="min_row">
                     <div class="img">
-                        <img src="" alt="">
+                        <img src="images/VideoCapture_20230812-073332.jpg.png" alt="A hospital mission department">
                     </div>
-                    <p class="min_row--text"></p>
+                    <p class="min_row--text">Evangelism Department, A team going hospital missions every tuesdays and prisons every month, According to mathew 26vs26</p>
                 </div>
                 <div class="min_row">
                     <div class="img">
-                        <img src="" alt="">
+                        <img src="images/SundaySchool.jpeg.png" alt="Jesus Christ blessing the children">
                     </div>
-                    <p class="min_row--text"></p>
+                    <p class="min_row--text">Sunday school ministry, chief pastor;Mrs Kiplory, every sunday at main service, Rallies on every school off holidays</p>
                 </div>
                 <div class="min_row">
                     <div class="img">
-                        <img src="" alt="">
+                        <img src="images/2021-08-16.jpg.png" alt="sites photo">
                     </div>
-                    <p class="min_row--text"></p>
+                    <p class="min_row--text">Building commitee,In charge of the construction of new sunctuary and meets every sunday to check on the progress</p>
                 </div>
             </div>
         </div>
-
     </div>
 
     <div class="quote_section">
         <div class="container">
-            <h2>"I am the way and the truth and the life. No one comes to the Father except through me"(John 14:6).</h2>
-            <p>-Jesus Christ</p>
+            <div class="quote">
+                <h2>"I am the way and the truth and the life. No one comes to the Father except through me"(John 14:6).</h2>
+                <p>-Jesus Christ</p>
+            </div>
         </div>
 
     </div>
@@ -95,14 +95,17 @@
                     <h2 class="cta_title">Register here to fellowship with us</h2>
                     <p class="cta_text">Sign up to get all notifications</p>
                 </div>
-                <button class="cta_btn">Sign up</button>
+
+                <div>
+                    <button class="cta_btn">Sign up</button>
+                </div>
             </div>
         </div>
     </div>
 
     <div class="footer_section">
+
         <div class="container">
-            
             <p>copyright <i class="fa-regular fa-copyright"></i> Outreach revival ministries Iten</p>
         </div>
 
